# ts_go

./: .gitignore  LICENSE  README.md  deploy.sh  package.json  port_free.sh  pyproject.toml
backend/: README.md
backend/app/: main.py
backend/app/api/: files.py  frame.py  mdoc.py  preview.py  project.py  ts.py
backend/app/cache/: lru.py
backend/app/image/: binning.py  contrast.py  encoder.py  reader.py
backend/app/matcher/: cut_match.py
backend/app/mdoc/: parser.py  writer.py
backend/app/models/: types.py
backend/app/state/: project_state.py
docs/: CACHE_SYSTEM.md
src/lib/: store.ts  types.ts
src/lib/components/: FileBrowser.svelte  Gallery.svelte  Toast.svelte  ToastContainer.svelte
src/lib/stores/: toastStore.ts
src/routes/: +page.svelte
